Fix button spacing

--- a/client/static/style.css
+++ b/client/static/style.css
@@ -132,15 +132,15 @@ table th {
 .create-game .create-game-col {
   vertical-align: middle;
   text-align: right;
-  width: 235px;
+  width: 250px;
 }
 
 .create-game .create-game-col button {
   cursor: pointer;
   font-size: 150%;
   margin-top: 31px;
-  padding: 15px 28px;
-  width: 230px;
+  padding: 17px 28px;
+  width: 245px;
 }
 
 .create-game .symbol-selection {
